fix paragraph spacing with advent of anchor links

--- a/docs/less/content.less
+++ b/docs/less/content.less
@@ -514,11 +514,11 @@ h3 .section-anchor::before {
       }
     }
 
-    p:first-child {
+    p:first-of-type {
       margin-top: 0;
     }
 
-    p:last-child {
+    p:last-of-type {
       margin-bottom: 0;
     }
   }
